# summit-xl-ros2-humble

./: .gitignore  README.md
services/: can0.service  pixhawk.service  summit_nav2.service  summit_teleop.service
src/summit_xl_base/: package.xml  setup.cfg  setup.py
src/summit_xl_base/config/: nav2_no_obstacles.yaml  ps4.config.yaml  summit.rviz
src/summit_xl_base/launch/: teleop_bringup.launch.py
src/summit_xl_base/summit_xl_base/: base_node.py  map_data_republisher.py  pixhawk_nav_odom.py  rtcm_relay_node.py
summit_xl_ws/scripts/: arranqueauto_pixhawk.sh  install_services.sh
